Исправлен тест на перезапись задачи в историю